--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="ok">OK</string>
     <string name="remove_location_updates">Detener</string>
 
-    <string name="title_notificacion">Ubicacón Compartida activada</string>
+    <string name="title_notificacion">Ubicación Compartida activada</string>
     <string name="activar">Activar</string>
 
     <!-- TODO: Remove or change this placeholder text -->
